# CSUROS

./: README.md
csuro_arduino/: CMakeLists.txt  Guia_clase_ROS_arduino_rasp  package.xml
csuro_arduino/firmware/: CMakeLists.txt  chatter.cpp  ultrasonic.cpp
csuro_bumpgo_cpp/: .cproject  .project  CMakeLists.txt  package.xml
csuro_bumpgo_cpp/src/: nodo_bumpgo.cpp
csuro_comms_cpp/: .cproject  .project  CMakeLists.txt  package.xml
csuro_comms_cpp/launch/: pubsub.launch
csuro_comms_cpp/src/: nodo_distance_client.cpp  nodo_distance_server.cpp  nodo_point_pub.cpp  nodo_point_sub.cpp  nodo_sequence_client.cpp  nodo_sequence_server.cpp
csuro_comms_cpp/srv/: Distance.srv
csuro_composition_cpp/: .cproject  CMakeLists.txt  package.xml
csuro_composition_cpp/include/csuro_composition_cpp/: publisher.hpp  subscriber.hpp
csuro_composition_cpp/src/: composed.cpp  publisher.cpp  publisher_proc.cpp  subscriber.cpp  subscriber_proc.cpp
csuro_intro_cpp/: .project  CMakeLists.txt  package.xml
csuro_intro_cpp/launch/: pubsub.launch
csuro_intro_cpp/src/: nodo_iterativo.cpp  nodo_pub.cpp  nodo_pub_qos.cpp  nodo_simple.cpp  nodo_sub.cpp  nodo_sub_async.cpp  nodo_sub_obj.cpp
csuro_intro_py/: .project  CMakeLists.txt  package.xml
csuro_intro_py/scripts/: nodo_iterativo.py  nodo_pub.py  nodo_simple.py  nodo_sub.py  nodo_sub_obj.py
csuro_manipulation/: CMakeLists.txt
csuro_manipulation/src/: gripper_manipulation_node.cpp  pick_manipulation_node.cpp
csuro_navigation/: .project  CMakeLists.txt  csuro_global_planner_plugin.xml  package.xml
csuro_navigation/include/csuro_navigation/: csuro_global_planner.h
csuro_navigation/launch/: localization.launch  navigation.launch  navigation_open.launch  slam_mapping.launch
csuro_navigation/launch/includes/: move_base.launch.xml
csuro_navigation/mymaps/: map.pgm  map.yaml
csuro_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml
csuro_navigation/src/: csuro_global_planner.cpp  navigate_to_wp.cpp
csuro_robots/: .project  CMakeLists.txt  package.xml
csuro_robots/definition/robot/: my_laser_config.yaml
csuro_robots/definition/sim/: hokuyo.urdf.xacro  kobuki_hexagons_asus_xtion_pro.urdf.xacro  my_laser_config.yaml
csuro_robots/launch/: real_hokuyo.launch  real_hokuyo.launch.save  real_openRobocup.launch  real_robocupEducation.launch  real_rplidar.launch  set_remote_robot.sh  sim.launch
csuro_robots/launch/includes/: robot.launch.xml
csuro_rosbridge/web/: rosbridge_web_example.html
csuro_rqt/: CMakeLists.txt  package.xml  plugin.xml
csuro_rqt/include/csuro_rqt/: TwistCmd.h
csuro_rqt/src/csuro_rqt/: TwistCmd.cpp  TwistCmd.ui
csuro_sensors/: .cproject  .project  CMakeLists.txt  package.xml
csuro_sensors/src/: nodo_rgbd_filter.cpp  nodo_rgbd_tf.cpp
csuro_tf/: .cproject  .project  CMakeLists.txt  package.xml
csuro_tf/scripts/: nodo_tf_pub.py  nodo_tf_sub.py
csuro_tf/src/: nodo_tf_pub.cpp  nodo_tf_sub.cpp
csuro_tools/: .cproject  .project  CMakeLists.txt  package.xml
csuro_tools/include/csuro_tools/: Scan.h
csuro_tools/resources/: ui.glade
csuro_tools/src/: PIDController.cpp  Scan.cpp  image_publisher_from_disk.cpp  nodo_hsv_tuner_2d.cpp  nodo_markers.cpp  nodo_test_scan.cpp
