<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>csuro_composition_cpp</name>
  <version>0.4.0</version>
  <description>
      Paquete de introducción de csuro (Curso Superior Universitario de Programación de Robots con ROS)
  </description>
  <maintainer email="fmrico@gmail.com">paco</maintainer>
  <license>GPLv3</license>
  <url type="website">http://www.urjc.es/estudios/titulos-propios/1701-curso-superior-universitario-en-programacion-de-robots-con-ros</url>

  <author email="fmrico@gmail.com">Francisco Martín Rico</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>class_loader</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>rmw_implementation</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
